<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Igor\'s Calculator</string>
    <string name="app_author">Igor Melo</string>
    <string name="authors_sid">100540931</string>
    <string name="course">CSCI4100U Mobile Devices</string>
    <string name="assignment_no">Assignment 1</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="sum">+</string>
    <string name="subtract">-</string>
    <string name="equal">=</string>
    <string name="clear">Clear</string>
    <string name="backspace">Delete</string>
    <string name="point">.</string>

</resources>
