<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MyActivity"
android:id="@id/activity_my"
android:orientation="vertical" >
    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:maxLines="1"
        android:height="100dp"
        android:gravity="center_vertical|right"
        android:lines="1"
        android:ellipsize="none"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/backspace"
            android:textSize="25sp"
            android:onClick="backspace"
            android:layout_weight="1"
            android:background="@drawable/operators_style" />
        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/clear"
            android:textSize="25sp"
            android:onClick="reset"
            android:layout_weight="1"
            android:background="@drawable/operators_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/seven"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/eight"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/nine"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/divide"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/operators_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/four"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/five"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/six"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/multiply"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/multiply"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/operators_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/one"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/two"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/three"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/subtract"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/subtract"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/operators_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/point"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/point"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/button0"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/zero"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/button_style" />
        <Button
            android:id="@+id/equal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/equal"
            android:textSize="40sp"
            android:onClick="result"
            android:layout_weight="1"
            android:background="@drawable/operators_style" />
        <Button
            android:id="@+id/sum"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/sum"
            android:textSize="40sp"
            android:onClick="buttonPressed"
            android:layout_weight="1"
            android:background="@drawable/operators_style" />
    </LinearLayout>

</LinearLayout>
